--- a/index.html
+++ b/index.html
@@ -17,8 +17,35 @@
       rel="stylesheet"
       href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <title>Cofee-shop</title>
   </head>
   <body>
-</body>
+    <!-- header section  -->
+    <header class="header">
+      <a href="#" class="logo"
+        ><img src="images/logo.png" alt="cofee-logo"
+      /></a>
+      <nav class="navbar">
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#menu">menu</a>
+        <a href="#products">products</a>
+        <a href="#review">review</a>
+        <a href="#contact">contact</a>
+        <a href="#blogs">blogs</a>
+      </nav>
+      <div class="icons">
+        <div class="fa fa-search" id="search"></div>
+        <div class="fa-solid fa-cart-plus" id="cart"></div>
+        <div class="fa fa-bars" id="menu"></div>
+      </div>
+    </header>
+
+    <!-- custom js file link  -->
+    <script src="js/index.js"></script>
+  </body>
 </html>
